# backend-study

./: .gitignore  .ruff.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  env.template  pyproject.toml  roadmap.txt
api/: main.py  run.bat
api/domains/blog_post/entities/: blog_post_entity.py
api/domains/blog_post/errors/: blog_post_errors.py  blog_post_handlers.py
api/domains/blog_post/interfaces/: blog_post_interface.py
api/domains/blog_post/models/: blog_post_models.py
api/domains/blog_post/repository/: blog_post_repository.py
api/domains/blog_post/routes/: blog_post_routes.py
api/domains/blog_post/services/: blog_post_services.py
api/errors/: blog_post_errors.py  blog_post_handlers.py
api/models/: blog_post.py  blog_post_models.py  response_models.py
api/repository/: blog_post_repository.py
api/routes/: blog_post.py  blog_post_routes.py
api/services/: blog_post.py  blog_post_services.py
app/api/: main.py
app/api/blog_post/entities/: blog_post_entity.py
app/core/: logger.py  redis.py  settings.py
app/core/database/: db.py  make_db.py
app/core/middleware/: http_logger.py
core/: logger.py  settings.py
core/database/: db.py  make_db.py
core/middleware/: http_logger.py
scripts/: build.bat  cov.bat  make_db.bat  ruff.bat  run.bat  test.bat  up.bat
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/api/: test_blog_post_api.py
tests/unit/: conftest.py
tests/unit/errors/: test_blog_post_errors.py
tests/unit/models/: test_blog_post_models.py
tests/unit/repository/: test_blog_post_repository.py
(+10 files in other folders)
