[project]
name = "backend-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.3",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.pytest.ini_options]
pythonpath = [ "." ]
